--- a/form.html
+++ b/form.html
@@ -1,4 +1,4 @@
-<form action="/my-handling-form-page" method="post">
+<form action="form.php" method="post">
 	<div>
 		<label for="name">Name:</label>
 		<input type="text" id="name" name="user_name">
